Fix uneven boxes

--- a/src/main/webapp/styles/dropdown.css
+++ b/src/main/webapp/styles/dropdown.css
@@ -47,7 +47,6 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
-  height: 60vh;     
   max-height: 0;
   opacity: 0;
   transition: max-height 0.5s ease-in-out, opacity 0.2s linear;
