--- a/src/main/webapp/styles/profile.css
+++ b/src/main/webapp/styles/profile.css
@@ -1,7 +1,7 @@
 .profile {
   background-color: rgba(255, 255, 255, 0.2);
   box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-  margin: 2vh 1vw auto;
+  margin: 2vh 1vw;
   padding: 0.5vh 1vw;
   min-width: max(350px, 20vw);
   width: auto;
